# cmake_meson_thesis

./: .gitignore  README.md
build_output/: LINAK_pc_output.txt  desktop_output.txt  desktop_sample_app.hex  laptop_output.txt
cmake/: CMakeLists.txt  Makefile  desktop_output.txt
cmake/buildresults/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sample_app  sample_app.map
cmake/buildresults/arch/arm/: cmake_install.cmake
cmake/buildresults/src/: cmake_install.cmake
cmake/cmake/: Conversions.cmake
cmake/cmake/toolchains/cross/: arm-none-eabi-gcc.cmake  cortex-m3.cmake
cmake/src/: CMakeLists.txt  a.c  b.c  d.c  f.c  g.c  i.c  j.c  main.c
cmake_build_output/: LINAK_pc_output.txt  LINAK_pc_sample_app.hex  README.md  desktop_makefile_terminal_output.txt  desktop_ninja_terminal_output.txt  desktop_output.txt  desktop_sample_app.hex  laptop_makefile_parallel_time_output.txt  laptop_makefile_time_output.txt  laptop_ninja_time_output.txt  laptop_output.txt  work_laptop_makefile_parallel_time_output.txt  work_laptop_ninja_time_output.txt
cmake_build_output/Hex_output/: laptop_sample_app.hex
cmake_build_output/Perfomance_output/: desktop_makefile_parallel_time_output.txt  desktop_makefile_time_output.txt  desktop_ninja_parallel_time_output.txt  laptop_makefile_time_output.txt  work_laptop_makefile_time_output.txt
cmake_build_output/Terminal_output/: desktop_makefile_terminal_output.txt  laptop_makefile_terminal_output.txt  work_laptop_makefile_terminal_output.txt
meson/: desktop_output.txt  laptop_output.txt  meson.build  output.txt  test.sh
meson/lib/: v.h  x.h  z.h
meson/src/: c.c  e.c  h.c  main.c  meson.build
meson/subprojects/: test.wrap
meson_build_output/: LINAK_pc_output.txt  LINAK_pc_sample_app.hex  README.md  desktop_output.txt  desktop_sample_app.hex  laptop_output.txt
meson_build_output/Perfomance_output/: desktop_ninja_time_output.txt  laptop_ninja_time_output.txt  work_laptop_ninja_time_output.txt
meson_build_output/Terminal_output/: desktop_terminal_output.txt
